--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,15 +11,15 @@ jobs:
     runs-on: macos-11.0
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Download macOS 10.12 SDK (script from VoodooI2C)
-        run: curl -L https://github.com/alexey-lysiuk/macos-sdk/releases/download/10.12/MacOSX10.12.tar.bz2 -o /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.tar.bz2 && tar -xjf /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.tar.bz2 -C /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/
+      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+        with:
+          repository: acidanthera/MacKernelSDK
+          path: MacKernelSDK
       - name: Xcodebuild
         uses: sersoft-gmbh/xcodebuild-action@v1.1
         with:
           project: ThermalSolution.xcodeproj
-          sdk: macosx10.12
           action: build
       - uses: actions/upload-artifact@v2
         with:
