--- a/ThermalSolution/Info.plist
+++ b/ThermalSolution/Info.plist
@@ -59,6 +59,19 @@
 			<key>IOProviderClass</key>
 			<string>IOService</string>
 		</dict>
+		<key>LowPowerSolution</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+			<key>IOClass</key>
+			<string>LowPowerSolution</string>
+			<key>IONameMatch</key>
+			<string>PNP0D80</string>
+			<key>IOProbeScore</key>
+			<integer>100</integer>
+			<key>IOProviderClass</key>
+			<string>IOService</string>
+		</dict>
 	</dict>
 	<key>OSBundleLibraries</key>
 	<dict>
