LowPowerSolution: support function mask override; update power states.

--- a/ThermalSolution/Info.plist
+++ b/ThermalSolution/Info.plist
@@ -71,6 +71,8 @@
 			<integer>100</integer>
 			<key>IOProviderClass</key>
 			<string>IOService</string>
+			<key>EnabledStates</key>
+			<data>AA==</data>
 		</dict>
 	</dict>
 	<key>OSBundleLibraries</key>
